# objectwrapper

./: CMakeLists.txt
src/: main.c  packer.c  socketipc.c
src/include/: ltdefs.h  packer.h  socketipc.h
